# rias

./: .gitignore  CMakeLists.txt  README.md
include/: rias.h
tests/: main.c  test.c  test.h
